--- a/sass/components/_chips.scss
+++ b/sass/components/_chips.scss
@@ -1,5 +1,6 @@
 .chip {
   display: inline-block;
+  margin: 2px 0;
   height: 32px;
   font-size: 13px;
   font-weight: 500;
